# backend/docs/swagger.yaml
@@ -56,6 +56,8 @@ definitions:
     type: object
   api.groupResponse:
     properties:
+      id:
+        type: integer
       isOwner:
         type: boolean
       members:
@@ -138,8 +140,10 @@ definitions:
     type: object
   api.userGroupRequest:
     properties:
-      userID:
+      user_id:
         type: integer
+    required:
+    - user_id
     type: object
 host: localhost:54321
 info:
@@ -414,7 +418,7 @@ paths:
       tags:
       - Groups
       - V1
-  /v1/groups/{group_id}/user:
+  /v1/groups/{group_id}/users:
     delete:
       consumes:
       - application/json
